Agregando fuentes y cambios en videos y imagenes

--- a/influncer_portafolio/index.html
+++ b/influncer_portafolio/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-
+     <!--Fuente para el titulo "PETFLUENCER & LIFESTYLE"-->   
+    <link rel="stylesheet" href="https://use.typekit.net/gpm8uor.css">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
     <nav class="navbar navbar-expand-lg custom-navbar sticky-top">
         <div class="container-fluid px-4 px-lg-5">
             <!-- Logo -->
-            <a class="navbar-brand fw-bold fs-4 me-3" href="#"><span class="dot">Lia</span>Garrido</a>
+            <a class="navbar-brand fw-bold fs-4 me-3" href="#"><span class="dot">Lía</span>Garrido</a>
 
             <!-- Botón hamburguesa para colapsar -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
@@ -57,12 +58,17 @@
                 <!-- Columna Izquierda: Texto -->
                 <div class="col-lg-6 text-center text-lg-start mb-5 mb-lg-0">
                     <div class="col-lg-6 text-center text-lg-start position-relative mb-5 mb-lg-0">
-                        <p class="cookie-regular text-pink mb-2 fs-2 position-relative" data-aos="fade-up">Hola, me
+                        <p class="text-hi text-pink mb-2 fs-2 position-relative" data-aos="fade-up">Hola, me
                             presento...</p>
                         <div class="flower-wrapper" data-aos="fade-up">
                             <img src="./img/cabeza_flor.PNG" alt="decoración" class="flower">
                         </div>
-                        <h1 class="hero-title mb-3" data-aos="fade-up">Lia Garrido Petfluencer🐶 & LifeStyle 😎</h1>
+                        <div class="hero-title mb-3" data-aos="fade-up">
+                            <h1 class="title-container">
+                                <span class="name-title">LÍA GARRIDO</span> <br> 
+                                <span class="petfluencer-title">PETFLUENCER & LIFESTYLE</span>
+                            </h1>
+                        </div>
                         <p class="hero-description mb-4" data-aos="fade-up" data-aos-delay="100">
                             Soy <b>Lía Garrido</b>, me gusta llamarme “petfluencer” pues me dedico a la creación de
                             contenido sobre etología canina y felina,
@@ -118,7 +124,7 @@
                         <div class="corner-line bottom-left"></div>
                         <div class="corner-line bottom-right"></div>
 
-                        <p class="influencer-name">Lia Garrido</p>
+                        <p class="influencer-name">Lía Garrido</p>
                     </div>
                 </div>
             </div>
@@ -127,7 +133,7 @@
     <!-- SECCIÓN ESTADÍSTICAS-->
     <section class="stats-section py-5">
         <div class="container text-center">
-            <h2 class="section-title mb-5">Mi numero de Seguidores Actuales</h2>
+            <h2 class="section-title mb-5">Mi Número de Seguidores Actuales</h2>
             <div class="row g-4 justify-content-center">
 
                 <!-- TIKTOK -->
@@ -267,18 +273,12 @@
 
                     <!-- Iconos de redes sociales -->
                     <div class="social-icons-section mt-4">
-                        <div class="d-flex justify-content-center justify-content-lg-start gap-3 flex-wrap">
+                        <div class="d-flex justify-content-center gap-3 flex-wrap">
                             <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon-story" title="Instagram">
                                 <img src="./img/instagram.png" alt="Instagram" class="social-img">
                             </a>
                             <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc" target="_blank" class="social-icon-story" title="TikTok">
                                 <img src="./img/tiktok.png" alt="TikTok" class="social-img">
-                            </a>
-                            <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon-story" title="Maquillaje">
-                                <img src="./img/maquillaje_icono.png" alt="Maquillaje" class="social-img">
-                            </a>
-                            <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon-story" title="Mascotas">
-                                <img src="./img/mascotas.png" alt="Mascotas" class="social-img">
                             </a>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                         <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
                         <div class="video-container">
                             <video class="plyr-video" muted>
-                                <source src="./media/video_prueba.mp4" type="video/mp4">
+                                <source src="./media/video_lia_garrido1.mp4" type="video/mp4">
                                 Tu navegador no soporta el elemento de video.
                             </video>
                         </div>
@@ -310,7 +310,7 @@
                         <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
                         <div class="video-container">
                             <video class="plyr-video" muted>
-                                <source src="./media/video_prueba_2.mp4" type="video/mp4">
+                                <source src="./media/video_lia_garrido_2.mp4" type="video/mp4">
                                 Tu navegador no soporta el elemento de video.
                             </video>
                         </div>
@@ -322,13 +322,13 @@
                         <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
                         <div class="video-container">
                             <video class="plyr-video" muted>
-                                <source src="./media/video_prueba_3.mp4" type="video/mp4">
+                                <source src="./media/video_lia_garrido_3.mp4" type="video/mp4">
                                 Tu navegador no soporta el elemento de video.
                             </video>
                         </div>
                     </div>
                 </div>
-
+        <!--- POR SI SE OCUPA AGREGAR OTRO VIDEO
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="phone-frame">
                         <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
@@ -340,6 +340,7 @@
                         </div>
                     </div>
                 </div>
+            -->
             </div>
         </div>
     </section>
@@ -351,6 +352,9 @@
             <div class="collaborations-carousel-wrapper">
                 <div class="owl-carousel owl-theme collaborations-carousel">
                     <!-- Logos de Colaboraciones -->
+                     <div class="collaboration-item">
+                        <img src="./img/colaboraciones/colab_eternal_secret.PNG" alt="Eternal Secret" class="img-fluid">
+                    </div>
                     <div class="collaboration-item">
                         <img src="./img/colaboraciones/colab_garnier.PNG" alt="Garnier" class="img-fluid">
                     </div>
