Agregando Precios Unitarios

--- a/influncer_portafolio/index.html
+++ b/influncer_portafolio/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-     <!--Fuente para el titulo "PETFLUENCER & LIFESTYLE"-->   
+    <!--Fuente para el titulo "PETFLUENCER & LIFESTYLE"-->
     <link rel="stylesheet" href="https://use.typekit.net/gpm8uor.css">
 </head>
 
@@ -65,7 +65,7 @@
                         </div>
                         <div class="hero-title mb-3" data-aos="fade-up">
                             <h1 class="title-container">
-                                <span class="name-title">LÍA GARRIDO</span> <br> 
+                                <span class="name-title">LÍA GARRIDO</span> <br>
                                 <span class="petfluencer-title">PETFLUENCER & LIFESTYLE</span>
                             </h1>
                         </div>
@@ -103,8 +103,10 @@
                         Conecta conmigo <span class="social-line"></span>
                     </p>
                     <div class="d-flex justify-content-center justify-content-lg-start gap-3 flex-wrap">
-                        <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc" target="_blank" class="social-icon"><i class="bi bi-tiktok"></i></a>
+                        <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon"><i
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
+                            target="_blank" class="social-icon"><i class="bi bi-tiktok"></i></a>
                     </div>
                 </div>
 
@@ -252,7 +254,7 @@
                     data-aos="fade-up">
                     <div class="row g-3">
                         <div class="col-6">
-                             <h3 class="stat-value"><span id="count-alcance">0</span>M<span class="text-pink">+</span>
+                            <h3 class="stat-value"><span id="count-alcance">0</span>M<span class="text-pink">+</span>
                             </h3>
                             <p class="stat-label">Alcance</p>
                         </div>
@@ -274,10 +276,12 @@
                     <!-- Iconos de redes sociales -->
                     <div class="social-icons-section mt-4">
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
-                            <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon-story" title="Instagram">
+                            <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="social-icon-story"
+                                title="Instagram">
                                 <img src="./img/instagram.png" alt="Instagram" class="social-img">
                             </a>
-                            <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc" target="_blank" class="social-icon-story" title="TikTok">
+                            <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
+                                target="_blank" class="social-icon-story" title="TikTok">
                                 <img src="./img/tiktok.png" alt="TikTok" class="social-img">
                             </a>
                         </div>
@@ -328,7 +332,7 @@
                         </div>
                     </div>
                 </div>
-        <!--- POR SI SE OCUPA AGREGAR OTRO VIDEO
+                <!--- POR SI SE OCUPA AGREGAR OTRO VIDEO
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
                     <div class="phone-frame">
                         <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
@@ -347,12 +351,12 @@
     <section class="collaborations-section py-5 bg-influencer" id="colaboraciones">
         <div class="container">
             <h2 class="text-center mb-5">Colaboraciones Recientes</h2>
-            
-            <!-- Carrusel de Colaboraciones - Funciona en todas las resoluciones -->
+
+            <!-- Carrusel de Colaboraciones-->
             <div class="collaborations-carousel-wrapper">
                 <div class="owl-carousel owl-theme collaborations-carousel">
                     <!-- Logos de Colaboraciones -->
-                     <div class="collaboration-item">
+                    <div class="collaboration-item">
                         <img src="./img/colaboraciones/colab_eternal_secret.PNG" alt="Eternal Secret" class="img-fluid">
                     </div>
                     <div class="collaboration-item">
@@ -380,10 +384,12 @@
                         <img src="./img/colaboraciones/colab_momovida.PNG" alt="Momovida" class="img-fluid">
                     </div>
                     <div class="collaboration-item">
-                        <img src="./img/colaboraciones/colab_jardines_mexico.PNG" alt="Jardines de Mexico" class="img-fluid">
+                        <img src="./img/colaboraciones/colab_jardines_mexico.PNG" alt="Jardines de Mexico"
+                            class="img-fluid">
                     </div>
                     <div class="collaboration-item">
-                        <img src="./img/colaboraciones/colab_sav_bienesraices.PNG" alt="Bienes y Raices" class="img-fluid">
+                        <img src="./img/colaboraciones/colab_sav_bienesraices.PNG" alt="Bienes y Raices"
+                            class="img-fluid">
                     </div>
                     <div class="collaboration-item">
                         <img src="./img/colaboraciones/colab_afun.PNG" alt="Afun" class="img-fluid">
@@ -398,6 +404,69 @@
             </div>
         </div>
     </section>
+    <!--PRECIOS Y PAQUETES-->
+    <section class="precios-section py-5 bg-light" id="precios">
+        <div class="container">
+            <h2 class="text-center mb-1 titulo-precios">Precios Unitarios</h2>
+            <p class="text-center subtitulo-precios mb-5">* Representados en MXN</p>
+            <div class="row gy-5 justify-content-center text-center">
+
+                <!-- Precio 1 -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+                    <h5 class="mb-3 tipo-servicio">TIKTOK HISTORIA</h5>
+                    <div class="phone-frame">
+                        <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="./media/historia_tiktok_momo.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <p class="precio-servicio">$3,800</p>
+                </div>
+
+                <!-- Precio 2 -->
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+                    <h5 class="mb-3 tipo-servicio">TIKTOK VIDEO</h5>
+                    <div class="phone-frame">
+                        <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="./media/video_tiktok_loreal.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <p class="precio-servicio">$5,800</p>
+                </div>
+
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+                    <h5 class="mb-3 tipo-servicio">INSTAGRAM HISTORY</h5>
+                    <div class="phone-frame">
+                        <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="./media/historia_instagram_beerfest.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <p class="precio-servicio">$1,200</p>
+                </div>
+               <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+                    <h5 class="mb-3 tipo-servicio">INSTAGRAM REEL</h5>
+                    <div class="phone-frame">
+                        <img src="./img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="./media/video_instagram_reel_garnier.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <p class="precio-servicio">$2500</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer Section -->
     <footer class="footer-section py-5 bg-light">
@@ -417,22 +486,40 @@
                 <div class="col-lg-4 text-center" data-aos="fade-up" data-aos-delay="100">
                     <h2 class="footer-title mb-3">¡Trabajemos Juntos!</h2>
                     <p class="footer-text mb-4">
-                        ¿Tienes una marca de belleza o un producto que quieres promocionar? Me encantaría colaborar
+                        ¿Tienes una marca o un producto que quieres promocionar? Me encantaría colaborar
                         contigo
                         para crear contenido auténtico que conecte con mi audiencia.
                     </p>
-                    <a href="#contacto" class="btn btn-follow btn-lg">Colabora Conmigo</a>
+
+                    <!-- Botones de Contacto -->
+                    <div class="d-flex flex-column flex-sm-row justify-content-center gap-3 mb-3">
+                        <!-- Botón WhatsApp -->
+                        <a href="https://wa.me/5215512345678?text=Hola%20Lía,%20me%20gustaría%20solicitar%20información%20sobre%20colaboraciones%20vía%20correo"
+                            target="_blank" class="btn btn-follow btn-contact-mobile text-center">
+                            <i class="bi bi-whatsapp me-2"></i>
+                            WhatsApp ¡NO RECIBO LLAMADAS!
+                        </a>
+
+                        <!-- Botón Email -->
+                        <a href="mailto:contacto@liagarrido.com?subject=Solicitud%20de%20Colaboración&body=Hola%20Lía,%0A%0AMe%20gustaría%20solicitar%20información%20sobre%20colaboraciones.%0A%0ASaludos"
+                            class="btn btn-follow btn-contact-mobile text-center">
+                            <i class="bi bi-envelope me-2"></i>
+                            Enviar correo
+                        </a>
+                    </div>
                 </div>
 
                 <!-- Columna Derecha: Redes Sociales -->
                 <div class="col-lg-4 text-center" data-aos="fade-left" data-aos-delay="200">
                     <h4 class="footer-social-title mb-4">Sígueme en mis redes</h4>
                     <div class="d-flex justify-content-center gap-3 flex-wrap mb-4">
-                        <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="footer-social-icon" title="Instagram">
+                        <a href="https://www.instagram.com/soyliagarrido/" target="_blank" class="footer-social-icon"
+                            title="Instagram">
                             <i class="bi bi-instagram"></i>
                             <span class="social-text-footer">@soyliagarrido</span>
                         </a>
-                        <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc" target="_blank" class="footer-social-icon" title="TikTok">
+                        <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
+                            target="_blank" class="footer-social-icon" title="TikTok">
                             <i class="bi bi-tiktok"></i>
                             <span class="social-text-footer">@soyliagarrido</span>
                         </a>
