Agregando whatsap y correo y precio paquete2

--- a/influncer_portafolio/index.html
+++ b/influncer_portafolio/index.html
@@ -498,8 +498,8 @@
                             <p><img src="img/tiktok.png" class="icono-red"> 1 TIKTOK</p>
                             <p>+ CONT. PAUTADO <br> (20–30 DÍAS)</p>
                             <hr>
-                            <p><b>Sin Paquete : *Por Confirmar*</b></p>
-                            <p>En Paquete: *Por Confirmar*</p>
+                            <p><b>Sin Paquete : $9,800</b></p>
+                            <p>En Paquete: $8,2000 </p>
                         </div>
                     </div>
                 </div>
@@ -565,14 +565,14 @@
                     <!-- Botones de Contacto -->
                     <div class="d-flex flex-column flex-sm-row justify-content-center gap-3 mb-3">
                         <!-- Botón WhatsApp -->
-                        <a href="https://wa.me/5215512345678?text=Hola%20Lía,%20me%20gustaría%20solicitar%20información%20sobre%20colaboraciones%20vía%20correo"
+                        <a href="https://wa.me/525510301218?text=Hola%20Lía%20Me%20gustaría%20colaborar%20contigo"
                             target="_blank" class="btn btn-follow btn-contact-mobile text-center">
                             <i class="bi bi-whatsapp me-2"></i>
                             WhatsApp ¡NO RECIBO LLAMADAS!
                         </a>
 
                         <!-- Botón Email -->
-                        <a href="mailto:contacto@liagarrido.com?subject=Solicitud%20de%20Colaboración&body=Hola%20Lía,%0A%0AMe%20gustaría%20solicitar%20información%20sobre%20colaboraciones.%0A%0ASaludos"
+                        <a href="mailto:iegarridoc19@gmail.com?subject=Solicitud%20de%20Colaboración&body=Hola%20Lía,%0A%0AMe%20gustaría%20solicitar%20información%20sobre%20colaboraciones.%0A%0ASaludos"
                             class="btn btn-follow btn-contact-mobile text-center">
                             <i class="bi bi-envelope me-2"></i>
                             Enviar correo
