Cambios de ortografia y cambio en el navbar

--- a/influncer_portafolio/index.html
+++ b/influncer_portafolio/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg custom-navbar sticky-top">
+    <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid px-4 px-lg-5">
             <!-- Logo -->
             <a class="navbar-brand fw-bold fs-4 me-3" href="#"><span class="dot">Lía</span>Garrido</a>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-lg-start gap-3"
                         data-aos="zoom-in" data-aos-delay="200">
-                        <a href="#estadisticas" class="btn btn-follow">Mis estadisticas</a>
+                        <a href="#estadisticas" class="btn btn-follow">Mis estadísticas</a>
                         <a href="#colaboraciones" class="btn btn-follow">Colaboraciones</a>
                     </div>
                     <!-- Redes Sociales -->
@@ -165,7 +165,7 @@
                             </blockquote>
                         </div>
                         <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
-                            target="_blank" class="btn btn-follow mt-3">Sigueme</a>
+                            target="_blank" class="btn btn-follow mt-3">Sígueme</a>
                     </div>
                 </div>
 
@@ -220,7 +220,7 @@
                             </blockquote>
                         </div>
                         <a href="https://www.instagram.com/soyliagarrido/" target="_blank"
-                            class="btn btn-follow mt-3">Sigueme</a>
+                            class="btn btn-follow mt-3">Sígueme</a>
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
     <!--SECCION DE VIDEOS DE MUESTRA-->
     <section class="videos-section py-5 bg-light" id="videos">
         <div class="container">
-            <h2 class="text-center mb-5">Mis Ultimos Videos</h2>
+            <h2 class="text-center mb-5">Mis Últimos Videos</h2>
             <div class="row justify-content-center gy-3">
 
                 <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
@@ -624,7 +624,6 @@
     
     <!-- Scripts de interacción (carga después de las funcionalidades principales) -->
     <script src="js/navbar-handler.js"></script>
-    <script src="js/smooth-scroll.js"></script>
     <script src="js/social-embeds.js"></script>
 
     <!-- TikTok embed script -->
