Agregando sitio de influencer Lia Garrido

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -612,6 +612,21 @@
                         </div>
                     </div>
                 </div><!-- End Portfolio Item -->
+
+                <!--Belleza Item- PORTAFOLIO DE LIA GARRIDO-->
+                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-barberia">
+                    <img src="img/portafolio-img/influencer_portafolio.png" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4><a href="influncer_portafolio/index.html" data-bs-toggle="tooltip"
+                                title="Haz clic para conocer el sitio" class="a-color" target="_blank">Web Oficial Lia Garrido</a></h4>
+                        <div class="portfolio-icons">
+                            <a href="img/portafolio-img/influencer_portafolio.png" class="glightbox preview-link"><i
+                                    class="bi bi-zoom-in"></i></a>
+                            <a href="portfolio-details.html" class="dsetails-link"><i class="bi bi-link-45deg"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div><!-- End Portfolio Item -->
         </div>
 
     </section><!-- /Portfolio Section -->
